Fixed margin spacing and removed unnecessary code

--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -11,6 +11,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(--background-color);
+    margin: 0 20px 0 20px;
 }
 
 #content {
@@ -30,14 +31,15 @@ body {
 }
 
 #main-content {
-    border: 1.5px solid var(--secondary-color);
+    border-right: 1.5px solid var(--secondary-color);
+    border-left: 1.5px solid var(--secondary-color);
     position: relative;
 }
 
 #main-sidebar {
-    border-top: 1.5px solid var(--secondary-color);
+    border-top: 1px solid var(--secondary-color);
     border-right: 1.5px solid var(--secondary-color);
-    border-bottom: 1.5px solid var(--secondary-color);
+    border-bottom: 1px solid var(--secondary-color);
     background: var(--primary-color);
     padding-left: 5%;
 
@@ -64,6 +66,7 @@ body {
 #big-ideas {
     position: relative;
     padding: 20px 50px 20px 50px;
+    border: 1.5px solid var(--secondary-color);
 }
 
 #big-ideas section {
@@ -187,16 +190,8 @@ h1 {
         padding-left: 20px;
     }
 
-    .one {
-        flex: 1;
-    }
-
     .two {
         flex: 2;
-    }
-
-    .three {
-        flex: 3;
     }
 
     .four {
